# Ai-trading-dashboard

./: .gitignore  DEPLOYMENT_GUIDE.md  PROJECT_INSTRUCTIONS.md  README.md  TradingDashboard.jsx  test_mt5.bat
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
Project_docs_notes/: LLM_Rules  metatrader5_python_docs.md
backend/: env.example  main.py  package-lock.json  package.json  pyproject.toml  run_http2.ps1  run_http2.py  server.js  temp_test.py
backend/app/: config.py  database.py  models.py  security.py
backend/app/api/: account.py  admin.py  auth.py  candles.py  debug.py  debug_ohlc.py  symbols.py  terminal_admin.py  watchlist.py
backend/app/services/: account_cache.py  cache_worker.py  candle_cache.py  mt5_adapter.py  polling_service.py  terminal_auth.py  terminal_manager.py  websocket_service.py
backend/data/: mt5_credentials.json  trade_history.db
backend/python/: README.md  mt5_bridge.py  pyproject.toml
backend/routes/: ai.js  auth.js  mt5.js  news.js
backend/services/: aiService.js  mt5Service.js  newsService.js
backend/utils/: authToken.js  credentialEncryption.js  logger.js  tradeHistoryDb.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  main.jsx
pythonMT5/: .env.example  pyproject.toml
pythonMT5/src/: auth.py  logger.py  main.py  models.py  mt5_handler.py  tick_stream.py  trade_detector.py  websocket_client.py
pythonMT5/tests/: test_mt5_server.py
specs/master/: data-model.md  plan.md  (+3 more)
userScripts/: scrape_mt5_docs.py  test_login.py
(+65 files in other folders)
