[project]
name = "mt5-bridge_server"
version = "1.0.0"
description = "MetaTrader 5 Python bridge server for trading dashboard"
requires-python = ">=3.13"
dependencies = [
    "MetaTrader5>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
